# pupper-simulations

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  deploy.sh  pyproject.toml  requirements.txt  results.sh  ssh  ssh_requirements.txt  sweep.sh  teleop_locomotion.py  train.ipynb  train.sh  training_requirements.txt  training_testing.ipynb  view-results.sh  viewer.py  visualize-example.py  visualize.py  visualize.sh  visualize_bittle.py
Scripts/: env_test.py  retrieve_sweeps.sh  return.sh  sweep.sh  train.py  visualize.py
asset_visualization/: constants.py  init.py  logging_utils.py  main.py  model_converter.py
assets/descriptions/: bittleEnvironment.xml
darin-files/: bittle.urdf
docs/: PORT_FORWARDING.md  SETUP.md  SSH_WORKFLOW.md
legacy/: visualize.py
legacy/asset-visualization/: constants.py
locomotion/: __init__.py  barkour_env.py  bittle.xml  bittle_adapted.xml  bittle_adapted_scene.xml  bittle_barkour_env.py  bittle_dance_env.py  bittle_env.py  bittle_env_old.py  bittle_scene.xml  constants.py  device_utils.py  diagnostic_logger.py  domain_randomization.py  env_test.py  onnx_export.py  paths.py  sim.py  teleop.py  test_onnx_export.py  train.py  train_compat.py  training.ipynb  training.py  training_config.py  training_helpers.py  training_monitor.py  training_old.ipynb  video_recorder.py
locomotion/attempt_1/: bittle_adapted.xml  bittle_adapted_scene.xml  training.ipynb
locomotion/export/: convert_onnx_ir_version.py
locomotion/sweeps/: README.md  hparam_sweep.py  training_budget_and_batching_sweep.json  trials_2080ti_screen.json
locomotion/tasks/: README.md  __init__.py  bittle_dance_env.py  bittle_dance_hparams.json  bittle_walk_env.py  bittle_walking_hparams.json
locomotion/training/: __init__.py  config.py  helpers.py  run.py
outputs/_dance_smoke/: policy.onnx  policy.pt  training_summary.json
pupper_simulations.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
testing/locomotion/: __init__.py
tests/: conftest.py  test_bittle_dance_env.py  test_bittle_env.py  test_constants.py  test_domain_randomization.py  test_env_build.py  test_hparam_sweep.py  test_onnx_export.py  test_task_hparams.py  test_teleop_locomotion.py  test_train.py  test_training_config.py  test_training_helpers.py  test_training_monitor.py  test_video_recorder.py  test_visualize.sh
visualization/: constants.py  init.py  main.py  model_converter.py  simEnv.py
(+27 files in other folders)
