[project]
name = "pupper-simulations"
version = "0.1.0"
description = "MuJoCo and Brax-based simulation and reinforcement learning for quadruped locomotion"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "Oren Gershony"},
]

dependencies = [
    "numpy==2.3.4",
    "mujoco==3.3.4",
    "xacrodoc==1.3.0",
    "ml_collections==1.1.0",
    "jax[cuda12]==0.8.2",
    "brax==0.13.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "opencv-python-headless>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "jupyter",
    "notebook",
    "ipython",
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.urls]
Homepage = "https://github.com/triton-pupper-simulations/pupper-simulations"
Repository = "https://github.com/triton-pupper-simulations/pupper-simulations"
Issues = "https://github.com/triton-pupper-simulations/pupper-simulations/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["locomotion"]

[tool.setuptools.package-data]
"*" = ["*.xml", "*.mjcf"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
